tests/ui/async-await/in-trait/hir-wf-check-synthetic.stderr
error[E0277]: the trait bound `Self: Mirror` is not satisfied
  --> $DIR/hir-wf-check-synthetic.rs:12:17
   |
LL |     async fn e() {}
   |                 ^ the trait `Mirror` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait Foo: Mirror
   |          ++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
  --> $DIR/hir-wf-check-synthetic.rs:8:1
   |
LL | trait Foo
   | ^^^^^^^^^ the trait `Mirror` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait Foo: Mirror
   |          ++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
  --> $DIR/hir-wf-check-synthetic.rs:10:30
   |
LL |     <Self as Mirror>::Assoc: Clone,
   |                              ^^^^^ the trait `Mirror` is not implemented for `Self`
   |
note: required by a bound in `Clone`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
help: consider further restricting `Self`
   |
LL | trait Foo: Mirror
   |          ++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
   |
note: required by a bound in `Foo`
  --> $DIR/hir-wf-check-synthetic.rs:10:30
   |
LL | trait Foo
   |       --- required by a bound in this trait
LL | where
LL |     <Self as Mirror>::Assoc: Clone,
   |                              ^^^^^ required by this bound in `Foo`
help: consider further restricting `Self`
   |
LL | trait Foo: Mirror
   |          ++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
  --> $DIR/hir-wf-check-synthetic.rs:12:5
   |
LL |     async fn e() {}
   |     ^^^^^^^^^^^^ the trait `Mirror` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL |     async fn e() where Self: Mirror {}
   |                  ++++++++++++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
  --> $DIR/hir-wf-check-synthetic.rs:10:30
   |
LL |     <Self as Mirror>::Assoc: Clone,
   |                              ^^^^^ the trait `Mirror` is not implemented for `Self`
   |
note: required by a bound in `Clone`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
help: consider further restricting `Self`
   |
LL |     async fn e() where Self: Mirror {}
   |                  ++++++++++++++++++

error[E0277]: the trait bound `Self: Mirror` is not satisfied
   |
note: required by a bound in `Foo`
  --> $DIR/hir-wf-check-synthetic.rs:10:30
   |
LL | trait Foo
   |       --- required by a bound in this trait
LL | where
LL |     <Self as Mirror>::Assoc: Clone,
   |                              ^^^^^ required by this bound in `Foo`
help: consider further restricting `Self`
   |
LL |     async fn e() where Self: Mirror {}
   |                  ++++++++++++++++++

error: the type `impl Future<Output = ()>` is not well-formed
  --> $DIR/hir-wf-check-synthetic.rs:12:17
   |
LL |     async fn e() {}
   |                 ^

error: the type `impl Future<Output = ()>` is not well-formed
  --> $DIR/hir-wf-check-synthetic.rs:12:17
   |
LL |     async fn e() {}
   |                 ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: the type `impl Future<Output = ()>` is not well-formed
  --> $DIR/hir-wf-check-synthetic.rs:12:17
   |
LL |     async fn e() {}
   |                 ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0271]: type mismatch resolving `impl Future<Output = ()> == {async fn body of <Self as Foo>::e()}`
  --> $DIR/hir-wf-check-synthetic.rs:12:17
   |
LL |     async fn e() {}
   |                 ^-- the expected `async` fn body
   |                 |
   |                 expected `async` fn body, found associated type
   |
   = note: expected `async` fn body `{async fn body of <Self as Foo>::e()}`
              found associated type `impl Future<Output = ()>`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
